--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -6,10 +6,22 @@
   </div>
 </div>
 
-<div class="blog-area  pt--120 pb--70">
+<app-blog-card class="flex"></app-blog-card>
+
+<div class="cta-area  secondary-bg has-color ptb--50">
   <div class="container">
-    <div class="row">
-      <app-blog-card class="card-deck"></app-blog-card>
+    <div class="row align-items-center">
+      <div class="col-md-9">
+        <div class="cta-content">
+          <p class="mb-2">Click to Join the Advance Workshop</p>
+          <h2>Training in advance networking</h2>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="cta-btn">
+          <a class="btn btn-light btn-round" href="#">Join Now</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
