--- a/src/app/pages/teacher/teacher.component.html
+++ b/src/app/pages/teacher/teacher.component.html
@@ -7,10 +7,22 @@
 </div>
 
 <!-- teacher area start -->
-<div class="all-teachers  pt--120 pb--70">
+<app-teacher-card class="flex"></app-teacher-card>
+
+<div class="cta-area  secondary-bg has-color ptb--50">
   <div class="container">
-    <div class="row">
-      <app-teacher-card class="" style="display: flex"></app-teacher-card>
+    <div class="row align-items-center">
+      <div class="col-md-9">
+        <div class="cta-content">
+          <p class="mb-2">Click to Join the Advance Workshop</p>
+          <h2>Training in advance networking</h2>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="cta-btn">
+          <a class="btn btn-light btn-round" href="#">Join Now</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
