--- a/src/app/pages/blog/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog/blog-detail/blog-detail.component.html
@@ -111,9 +111,9 @@
           <!-- widget offer start -->
           <div class="widget widget-category">
             <h4 class="widget-title">Categories</h4>
-            <ul class="list">
-              <li *ngFor="let cate of categories">
-                  <!--{{cate.items}}-->
+            <ul class="list" *ngFor="let cate of data">
+              <li>
+                  {{cate.name}}
               </li>
             </ul>
           </div>
