fix Build project

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -79,6 +79,6 @@
       </div>
     </div>
     <!--class="commn-carousel owl-carousel"-->
-    <app-teacher-card class="card-deck"></app-teacher-card>
+    <app-teacher-card class="flex"></app-teacher-card>
   </div>
 </div>
