--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
 
 <owl-carousel-o [options]="customOptions" >
   <ng-template carouselSlide>
-    <div class="slider_item" style="background: url(../../../assets/images/bg/slider-bg1.jpg) center/cover no-repeat;">
+    <div class="slider_item" style="background: url(assets/images/bg/slider-bg1.jpg) center/cover no-repeat;">
       <div class="container">
           <div class="row">
               <div class="col-lg-7 col-md-9">
@@ -25,7 +25,7 @@
       </div>
   </ng-template>
   <ng-template carouselSlide>
-    <div class="slider_item" style="background: url(../../../assets/images/bg/slider-bg2.jpg) center/cover no-repeat;">
+    <div class="slider_item" style="background: url(assets/images/bg/slider-bg2.jpg) center/cover no-repeat;">
       <div class="container">
           <div class="row">
               <div class="col-lg-7 col-md-9">
@@ -41,7 +41,7 @@
       </div>
   </ng-template>
   <ng-template carouselSlide>
-    <div class="slider_item" style="background: url(../../../assets/images/bg/slider-bg3.jpg) center/cover no-repeat;">
+    <div class="slider_item" style="background: url(assets/images/bg/slider-bg3.jpg) center/cover no-repeat;">
       <div class="container">
           <div class="row">
               <div class="col-lg-7 col-md-9">
